<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >


        <LinearLayout
            android:layout_marginTop="70sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20sp"
            android:layout_marginEnd="60sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_for_payout"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/payout_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/payout_amount"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:layout_marginTop="20sp"
                android:textColor="@color/white"
                android:id="@+id/payout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/payout"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"
                android:scrollbars="vertical">
            </androidx.recyclerview.widget.RecyclerView>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>