<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_payment">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_margin="20dp"
        android:hint="@string/enter_your_email" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/cardInputWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"/>

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintTop_toBottomOf="@+id/cardInputWidget"
        app:layout_constraintStart_toStartOf="@+id/cardInputWidget"
        app:layout_constraintEnd_toEndOf="@+id/cardInputWidget"/>

    <!--
    Collect permission to reuse the customer's card:
      In your app, add terms on how you plan to process payments
      and reference the terms of the payment in the checkout flow
    See https://stripe.com/docs/strong-customer-authentication/faqs#mandates
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_authorise_stripe_samples_to_send_instructions_to_the_financial_institution_that_issued_my_card_to_take_payments_from_my_card_account_in_accordance_with_the_terms_of_my_agreement_with_you"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/payButton"
        app:layout_constraintStart_toStartOf="@+id/payButton"
        app:layout_constraintEnd_toEndOf="@+id/payButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>