<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/how_was_your_ride"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="10sp"/>


        <ImageView
            android:id="@+id/image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_default_user" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="20sp"/>

        <androidx.cardview.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            app:cardCornerRadius="10sp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="50sp">

            <RatingBar
                android:layout_margin="10sp"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_gravity="center"
                android:isIndicator="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rate"
                android:numStars="5"
                android:stepSize="1"
                android:visibility="visible"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@color/colorAccent"
            android:textColor="@color/white"/>

    </LinearLayout>
</RelativeLayout>